Bug 1449804 - Part 1: Avoid overwrapping the label content of animation target. r=gl
MozReview-Commit-ID: DJE842tgzfC

UltraBlame original commit: 6561515c80abd663f37e5b319abb6c611d51b5f6

--- a/devtools/client/themes/animation.css
+++ b/devtools/client/themes/animation.css
@@ -202,6 +202,19 @@ select.playback-rate-selector.devtools-button:not(:empty):not(:disabled):not(.ch
 }
 
 
+.animation-target .objectBox {
+  display: flex;
+  width: 100%;
+}
+
+.animation-target .objectBox .attrName {
+  min-width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+
 .animation-summary-graph {
   cursor: pointer;
   height: 100%;
